packages/next-swc/crates/core/tests/errors/next-font-loaders/too-many-args/output.js
import inter from "@next/font/google?Inter;{}";
